# kuczaracza_image

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  todo.txt
examples/: credits.txt  results.ods
src/: consts.h  dct_test.c  dec.c  edges_detection.c  enc.c  image.c  image.h  iofile.c  iofile.h  types.c  types.h
tests/: config.json  dct_test.c  diffrent_enc.sh  package-lock.json  unique_colors.js
